--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,7 @@ dl.news_item dd.desc a {color:#777; letter-spacing:-.05em;}
 dl.news_item.thum {margin-top: 19px}
 dl.news_item.thum ul.rel_art {float:left; padding-top:5px}
 
-dl.news_item.thum.round {float: left}
+dl.news_item.round {float: left; width:330px}
 dl.news_item.round dd.thumb{width:94px; height:94px; background:#e3e3e3; border-radius: 55px}
 dl.news_item.round dd.thumb img { width:94px; height:94px; border-radius: 55px}
 dl.news_item.round dt{ line-height:1.389em}
