--- a/css/main.css
+++ b/css/main.css
@@ -9,12 +9,13 @@
 @import url("http://chosun.com/dhtm/css/css_reset_2018.css");
 /* @import url("http://fonts.googleapis.com/earlyaccess/nanummyeongjo.css"); */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800");
+@import url('http://fonts.googleapis.com/earlyaccess/notosanskr.css');
 
 
 html, body{height:100%;}
 html{-webkit-text-size-adjust:none;}
 body{min-width:320px;word-break:keep-all;word-wrap:break-word;white-space:inherit;background: #50b7e7;}
-body, input, button, textarea{font-family:'¸¼Àº °íµñ','Malgun Gothic',³ª´®°íµñ,µ¸¿ò,Dotum,±¼¸²,Gulim,'Apple SD Gothic Neo',sans-serif;}
+body, input, button, textarea{font-family:'¸¼Àº °íµñ','Malgun Gothic',³ª´®°íµñ,µ¸¿ò,Dotum,±¼¸²,Gulim,'Apple SD Gothic Neo',sans-serif; letter-spacing:-0.05em}
 a, a:visited{color:#000; text-decoration:none}
 
 /* layout */
@@ -27,7 +28,7 @@ iframe{display:block}
 
 
 /* GNB css*/
-.cs_text_top {position:absolute; bottom:8px; left : 9px;}
+.cs_text_top {position:absolute; bottom:8px; left: 9px;}
 .top_banner {width:100%; background: #fff;}
 .top_banner_area{position:relative; height:108px; padding-top:20px; width:1195px; margin: 0 auto; text-align: center}
 .top_banner_area .area_links{position:absolute; right:34px; bottom:10px; text-align: right;}
@@ -65,12 +66,13 @@ iframe{display:block}
 
 /* in section items */
 #csContent section:first-child {border-top:0}
-section {width:100%; margin: 0 auto; padding:15px 0 40px 0; border-top:1px solid #000; position: relative;}
+section {width:100%; margin: 0 auto; padding:20px 0 40px 0; border-top:1px solid #000; position: relative;}
 section:after{content:""; display:block; clear:both; *zoom:1}
 dl.news_item:after{content:""; display:block; clear:both; *zoom:1}
 .sec_tit {float:left; width:165px; background: #f1d2f7;}
 .sec_con {float:left; width:700px; padding: 0 20px;border-left: solid 1px #d7d7d7; box-sizing: border-box}
 .sec_sub {float:left; width:330px; box-sizing: border-box;}
+.sec_con.wide {width:1030px; padding-right: 0;}
 
 
 /* in sec_tit items */
@@ -110,22 +112,71 @@ dl.news_item dd.desc a {color:#777; letter-spacing:-.05em;}
 dl.news_item.thum {margin-top: 19px}
 dl.news_item.thum ul.rel_art {float:left; padding-top:5px}
 
-dl.news_item.round {float: left; width:330px}
-dl.news_item.round dd.thumb{width:94px; height:94px; background:#e3e3e3; border-radius: 55px}
-dl.news_item.round dd.thumb img { width:94px; height:94px; border-radius: 55px}
-dl.news_item.round dt{ line-height:1.389em}
+.news_item_box {*zoom:1}
+.news_item_box:after {content:" "; display:block; clear:both; padding-bottom: 8px;}
+dl.news_item.round {float: left; width:329px; margin-top:0}
+dl.news_item.round dd.thumb{width:72px; height:72px; background:#e3e3e3; border-radius: 55px}
+dl.news_item.round dd.thumb img { width:72px; height:72px; border-radius: 55px}
+dl.news_item.round dt{ font-size: 15px; line-height:1.389em}
 dl.news_item.round dd.tit a{color:#777;font-size: 14px;}
 
-
-.sec_con dl.comt_item:first-child {padding-left:0}
+ul.tab_menu {}
+ul.tab_menu li{display:inline-block}
+ul.tab_menu li a{font-size:15px; font-weight:bold}
+ul.tab_menu li.active a{color:#c41916; border-bottom:2px solid #c41916}
+.sec_con .comt_item:first-child {padding-left:0}
 .comt_item_box {*zoom:1}
 .comt_item_box:after {content:" "; display:block; clear:both; padding-bottom: 8px;}
-dl.comt_item { width:210px; padding-left:14px; float:left;}
-dl.comt_item dd.thumb { position:relative; margin-bottom:3px; line-height:0;}
-dl.comt_item dd.thumb img { width:210px; height:118px;}
-dl.comt_item dd.up_tit {font-size: 14px; margin-bottom:4px; }
-dl.comt_item dd.up_tit a{color:#777;}
-dl.comt_item dt {font-size: 15px; color:#222; line-height: 1.333em;letter-spacing:-.05em;}
+.comt_item { width:210px; padding-left:14px; float:left;}
+.comt_item span.thumb { position:relative; margin-bottom:3px; line-height:0;}
+.comt_item span.thumb a {display: block;}
+.comt_item span.thumb img { width:210px; height:118px;}
+.comt_item .comt_txt {border-left:1px solid #d7d7d7; border-right:1px solid #d7d7d7; border-bottom:1px solid #d7d7d7;}
+.comt_item .comt_txt .item_tag {font-size: 14px; margin-bottom:4px; }
+.comt_item .comt_txt .item_tag a{color:#777;}
+.comt_item .comt_txt .item_tit {font-size: 15px; color:#000; line-height: 1.333em;letter-spacing:-.05em;}
+
+#photo {overflow:hidden}
+.photo_wrap {float:left; width:660px; padding-right: 19px;}
+
+.photo_wrap .bg_img {overflow: hidden;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height:169px;
+    background:url(http://image.chosun.com/main/201803//bg_st01.png) 0 0 repeat-x;
+  }
+.cont_thumb {
+    position: absolute; height:100px;
+    left: 0;
+    right: 0;
+    bottom: 20px;
+    padding: 0 30px;
+    color: #fff;}
+.photo_wrap_nav {float:left; width:325px; height:350px; overflow-y: scroll}
+#style-1::-webkit-scrollbar-track
+{
+	border-radius: 20px;
+  background-color: #fff;
+}
+
+#style-1::-webkit-scrollbar
+{
+	width: 5px;
+	background-color: #fff;
+}
+
+#style-1::-webkit-scrollbar-thumb
+{
+	border-radius: 20px;
+	background-color: #d7d7d7;
+}
+
+
+#bx-pager a {display:block; height:60px; padding-bottom:18px; padding-top:18px; border-top:1px solid #eaeaea}
+#bx-pager > a:first-child{border:0; padding-top:0;}
+#bx-pager div {height:60px}
 
 
 /* in sec_sub items */
@@ -151,7 +202,7 @@ dl.sub_thum_item dd.tit a{color:#777;}
 .Footer_inner ul li:first-child:before {display:none;}
 
 .Footer_inner ul.address { line-height: 1.667em}
-.Footer_inner ul.address li {padding: 0 7px; color:#999; font-family: ±¼¸²,Gulim,'Apple SD Gothic Neo',sans-serif; }
+.Footer_inner ul.address li {padding:0 7px; color:#999; font-family: ±¼¸²,Gulim,'Apple SD Gothic Neo',sans-serif; }
 .Footer_inner ul.address li em{font-style: normal; font-family: meiryo UI, «á«¤«ê«ª, 'ms pgothic', 'ms p«´«·«Ã«¯', sans-serif; }
 .Footer_inner ul.address li:before {background:#949494;}
 .Footer_inner ul li:first-child, .Footer_inner ul.address li:first-child, .Footer_inner ul.address li.border_none {padding-left:0}
